2008-11-25  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::is_equal): New member function.
	* ov.h: Declare it.
	* pt-select.cc (tree_switch_case::label_matches): Call
	octave_value::is_equal.

2008-11-25  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base.h (octave_base_value::type_conv_info): New class.
	* ov-base.h, ov-bool-mat.cc, ov-bool-mat.h, ov-bool-sparse.cc,
	ov-bool-sparse.h, ov-bool.cc, ov-bool.h, ov-complex.cc, ov-complex.h,
	ov-cx-mat.cc, ov-cx-mat.h, ov-null-mat.cc, ov-null-mat.h,
	ov-range.cc, ov-range.h, ov-re-mat.cc, ov-re-mat.h, ov-scalar.cc,
	ov-scalar.h, ov-str-mat.cc, ov-str-mat.h, ov.h:
	Return type_conv_info instead of type_conv_fcn from
	numeric_conversion_function and numeric_demotion_function
	methods.
	* ov-base.cc (octave_base_value::numeric_assign): Try biased conversion
	first if possible.
	* ov.cc (do_binary_op): Likewise. Also, search recursively.
	* ov.cc (do_cat_op): Likewise.

2008-11-24  David Bateman  <dbateman@free.fr>

	* graphics.cc (F__go_delete__): Check validity of handles before
	deleting them to avoid issues with callback function also deleting
	the handles.
	
2008-11-21  John Swensen  <jpswensen@comcast.net> 

	* debug.cc (bp_table::do_get_breakpoint_list): Avoid modifying
	bp_map while iterating over it.

2008-11-21  Jarkko Kaleva  <d3roga@gmail.com>

	* DLD-FUNCTIONS/eig.cc (Feig): Handle generalized eigenvalues and 
	eigenvectors.

2008-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* DLD_FUNCTIONS/det.cc: Include only DET.h. Retrieve & matrix type &
	store it after calculation if possible.

2008-11-17  John W. Eaton  <jwe@octave.org>

	* load-path.cc (load_path::dir_info::update): Simplify previous
	change.

	* load-path.h (load_path::dir_info::abs_dir_name): New data member.
	(load_path::dir_info::dir_info, load_path::dir_info::operator =):
	Copy abs_dir_name.
	(load_path::abs_dir_cache_type, load_path::dir_cache_iterator,
	load_path::const_dir_cache_iterator): New typedefs.