@@ -309,17 +309,15 @@ bp_table::do_get_breakpoint_list (const octave_value_list& fname_list)
   // problem is due to the fact that out_of_date_check(...) calls 
   // remove_breakpoints_in_file(...), which in turn modifies bp_map while we are
   // in the middle of iterating through it.
-  std::list<octave_user_code*> usercode_list;
-  for (breakpoint_map_iterator it = bp_map.begin (); it != bp_map.end (); it++)
-    {
-      octave_user_code *f = it->second;
-      usercode_list.push_back(f);
-    }
 
-  for (std::list<octave_user_code*>::iterator it = usercode_list.begin (); it != usercode_list.end (); it++)
-    {
-      out_of_date_check(*it);
-    }
+  std::list<octave_user_code*> usercode_list;
+
+  for (breakpoint_map_iterator it = bp_map.begin (); it != bp_map.end (); it++)
+    usercode_list.push_back (it->second);
+
+  for (std::list<octave_user_code*>::iterator it = usercode_list.begin ();
+       it != usercode_list.end (); it++)
+    out_of_date_check (*it);
 
 
   // Iterate through each of the files in the map and get the 
