@@ -1,3 +1,7 @@
+2008-12-03  John W. Eaton  <jwe@octave.org>
+
+	* debug.cc (bp_table::do_get_breakpoint_list): Style fixes.
+
 2008-11-25  Jaroslav Hajek  <highegg@gmail.com>
 
 	* ov.cc (octave_value::is_equal): New member function.
